changing json package to let me preview localhost on iphone, and tinkers with css variables to stop iphone hero looking bad

--- a/themes/wood_theme/src/sass/layout/hero.sass
+++ b/themes/wood_theme/src/sass/layout/hero.sass
@@ -69,18 +69,18 @@
           .navbar-menu
             background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%)
       // Responsiveness
-      // +mobile
-      //   .nav-toggle
-      //     span
-      //       background-color: $color-invert
-      //     &:hover
-      //       background-color: rgba($black, 0.1)
-      //     &.is-active
-      //       span
-      //         background-color: $color-invert
-      //   .nav-menu
-      //     .nav-item
-      //       border-top-color: rgba($color-invert, 0.2)
+      +mobile
+        .nav-toggle
+          span
+            background-color: $color-invert
+          &:hover
+            background-color: rgba($black, 0.1)
+          &.is-active
+            span
+              background-color: $color-invert
+        .nav-menu
+          .nav-item
+            border-top-color: rgba($color-invert, 0.2)
   // Sizes
   &.is-small
     .hero-body
@@ -149,7 +149,7 @@
   flex-grow: 0
   flex-shrink: 0
 
-// .hero-body
-//   flex-grow: 1
-//   flex-shrink: 0
-//   padding: 3rem 1.5rem
+.hero-body
+  flex-grow: 1
+  flex-shrink: 0
+  padding: 3rem 1.5rem
